welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: Int does not take parameters
while (y!=x()) {
           ^