welcome.lessons.welcome.variables.Variables.scala.code
var x=0
var y=0
while (!estSurBiscuit()) {
	avance()
	x=x+1
}
prendBiscuit()
while (y!=x()) {
	recule()
}
poseBiscuit()
